WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225138
[PlayStation] Suppress warnings for %llu format specifier for uint64_t.
https://bugs.webkit.org/show_bug.cgi?id=225138
Summary
[PlayStation] Suppress warnings for %llu format specifier for uint64_t.
Basuke Suzuki
Reported
2021-04-27 22:03:43 PDT
Use PRIu64 instead.
Attachments
PATCH
(5.58 KB, patch)
2021-04-27 22:08 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2021-04-27 22:08:58 PDT
Created
attachment 427237
[details]
PATCH
EWS
Comment 2
2021-04-27 23:39:52 PDT
Committed
r276692
(
237106@main
): <
https://commits.webkit.org/237106@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427237
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-04-27 23:40:18 PDT
<
rdar://problem/77251026
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug