[PlayStation] Suppress warnings for %llu format specifier for uint64_t. https://bugs.webkit.org/show_bug.cgi?id=225138

Reviewed by Darin Adler.

PRIu64 from <cstdint> should be use to format uint64_t value in printf.

Source/WebCore:

No new tests because there's no behavior change.

* workers/service/server/SWServerWorker.cpp:
(WebCore::SWServerWorker::startTermination):

Source/WebKit:

* NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
(WebKit::WebSWServerConnection::createFetchTask):
(WebKit::WebSWServerConnection::startFetch):


Canonical link: https://commits.webkit.org/237106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276692 268f45cc-cd09-0410-ab3c-d52691b4dbfc